# stack-note

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  detail_architecture.md  pyproject.toml  run_desktop.py  stack-note.spec  streamlit_app.py  style.css
app/: exceptions.py  main.py
app/api/: activities.py  analytics.py  briefings.py  chat.py  search.py
app/schemas/: activity.py  briefing.py  chat.py
app/utils/: responses.py
config/: __init__.py  settings.py
core/: __init__.py  agent.py  classifier.py  extractor.py  storage.py  url_collector.py  vector_store.py
extension/: background.js  manifest.json  popup.html  popup.js
pages/: home.py
utils/: __init__.py  logging.py  ui.py
