[project]
name = "stack-note"
version = "0.1.0"
description = "AI-powered personal knowledge base that automatically organizes, summarizes, and indexes everything you read online"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-upstage>=0.7.4",
    "langgraph>=1.0.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "trafilatura>=2.0.0",
]
